[dev] updated the README (getting started) and added the output files in .gitignore. 	modified:   .gitignore 	modified:   README.md

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,17 @@ Debug
 cmake_install.cmake
 src/cmake_install.cmake
 .vs/
+
+# editor
+*.swo
+*.swp
+*.swn
+*.swm
+
+# build
+_build
+
+# data
+data
+config.cfg
+out.jpg
